--- a/css/main.css
+++ b/css/main.css
@@ -37,17 +37,22 @@ body{
 
 .form-control:focus{
     box-shadow: none;
-    border-color: #BA68C8
-} 
+    border-color: #BA68C8;
+}
 
 .profile-button{
-    background: #BA68C8;
     box-shadow: none;
     border: none;
+    background: #BA68C8;
 }
 
 .profile-button:hover{
+    background: #682773;    
+}
+
+.profile-button:focus{
     background: #682773;
+    box-shadow: none;
 }
 
 .profile-button:active{
@@ -56,5 +61,5 @@ body{
 }
 
 .labels{
-    font-size: 11px;   
+    font-size: 11px;
 }
